fix: spacing of list and toggle blocks

--- a/src/style/notion-x.scss
+++ b/src/style/notion-x.scss
@@ -7,6 +7,139 @@
 @import 'katex/dist/katex.min.css';
 @import 'prismjs/themes/prism-tomorrow.css';
 
+@layer base {
+  .m2it-inside-box {
+    & > * {
+      margin-top: 0.75rem !important;
+      margin-bottom: 0.75rem !important;
+    }
+  }
+
+  .m2it-link-hover {
+    @apply text-pink-600;
+  }
+
+  .m2it-link {
+    @apply hover:m2it-link-hover font-inherit text-[#015caa] no-underline;
+  }
+
+  .m2it-headings {
+    @apply my-0 font-semibold text-[#111];
+  }
+
+  .m2it-prose-img {
+    @apply my-0;
+  }
+
+  .m2it-blockquote {
+    @apply my-3 border border-y-0 border-l-4 border-r-0 border-slate-500 py-3 font-inherit not-italic text-inherit;
+  }
+
+  .m2it-li {
+    @apply my-1.5;
+  }
+
+  .m2it-ol {
+    @apply my-0 pl-[1.45rem];
+  }
+
+  .m2it-ul {
+    @apply my-0 pl-[1.8rem];
+  }
+
+  .m2it-td {
+    @apply px-[10px] py-[5px];
+  }
+
+  .m2it-code {
+    @apply break-words rounded-md bg-gray-100 p-[1px_4px_2px_4px]
+    font-mono text-[90%] font-normal before:content-[''] after:content-[''];
+  }
+
+  .m2it-strong {
+    @apply font-medium text-[#111];
+  }
+
+  .m2it-table {
+    @apply my-0;
+  }
+
+  .m2it-prose {
+    @apply prose max-w-none leading-normal;
+    @apply prose-a:m2it-link;
+    @apply prose-headings:m2it-headings;
+    @apply prose-img:m2it-prose-img;
+    @apply prose-blockquote:m2it-blockquote;
+    @apply prose-h1:text-[1.55rem];
+    @apply prose-h2:text-[1.45rem];
+    @apply prose-h3:text-[1.35rem];
+    @apply prose-li:m2it-li;
+    @apply prose-ol:m2it-ol;
+    @apply prose-ul:m2it-ul;
+    @apply prose-td:m2it-td;
+    @apply prose-hr:my-6;
+    @apply prose-code:m2it-code;
+    @apply prose-figure:my-3;
+    @apply prose-strong:m2it-strong;
+    @apply prose-table:m2it-table;
+  }
+
+  .page-discrete {
+    .block-callout {
+      @apply rounded-lg border shadow-lg;
+    }
+    & > *:first-child {
+      @apply mt-0;
+    }
+    .updated-block {
+      display: none;
+    }
+  }
+
+  .notion-inline-code {
+    @apply border border-gray-200;
+  }
+
+  .m2it-box-shadow {
+    box-shadow: 8px 14px 38px #272c310f, 1px 3px 8px #272c3108;
+  }
+
+  .m2it-scrollbar {
+    &::-webkit-scrollbar {
+      width: 10px;
+      height: 10px;
+    }
+    &::-webkit-scrollbar-thumb {
+      background: #ced4da;
+      border-radius: 10px;
+      &:hover {
+        background: #adb5bd;
+      }
+    }
+    &::-webkit-scrollbar-track {
+      background: transparent;
+    }
+
+    &.m2it-scrollbar-small {
+      &::-webkit-scrollbar {
+        width: 7px;
+        height: 7px;
+      }
+      &::-webkit-scrollbar-thumb {
+        border-radius: 7px;
+      }
+    }
+  }
+
+  // Hide webkit search cancel button
+  .m2it-hide-wscb {
+    &::-webkit-search-cancel-button {
+      -webkit-appearance: none;
+      display: none;
+    }
+  }
+}
+
 strong {
   font-weight: 600;
 }
@@ -158,7 +291,8 @@ ul {
 }
 
 ol > ol > ul,
-ul > ul > ol {
+ul > ul > ol,
+ol > ol > ol {
   margin-left: -1.25rem;
 }
 
@@ -166,6 +300,18 @@ ol > ol,
 ul > ul {
   & > *:not(li):not(ol):not(ul) {
     margin-left: -1.25rem !important;
+  }
+
+  & > .toggle-container,
+  & > ol {
+    margin-left: -1.5rem !important;
+  }
+}
+
+// Trick to force inside children nested to the parent container (and take effect of the parent's padding left)
+ol, ul {
+  & > *:not(li) {
+    margin-left: 0px !important;
   }
 }
 
@@ -335,141 +481,6 @@ pre > code::before {
   &.font-bold {
     a {
       font-weight: inherit !important;
-      // text-decoration: underline;
-      // text-underline-offset: 4px;
-    }
-  }
-
-  // & > * {
-  //   color: inherit !important;
-  // }
-}
-
-@layer base {
-  .m2it-inside-box {
-    & > * {
-      margin-top: 0.75rem !important;
-      margin-bottom: 0.75rem !important;
-    }
-  }
-
-  .m2it-link-hover {
-    @apply text-pink-600;
-  }
-
-  .m2it-link {
-    @apply hover:m2it-link-hover font-inherit text-[#015caa] no-underline;
-  }
-
-  .m2it-headings {
-    @apply my-0 font-semibold text-[#111];
-  }
-
-  .m2it-prose-img {
-    @apply my-0;
-  }
-
-  .m2it-blockquote {
-    @apply font-inherit my-3 border border-y-0 border-l-4 border-r-0 border-slate-500 py-3 not-italic text-inherit;
-  }
-
-  .m2it-li {
-    @apply my-1.5;
-  }
-
-  .m2it-list {
-    @apply my-0 pl-[1.8rem];
-  }
-
-  .m2it-td {
-    @apply px-[10px] py-[5px];
-  }
-
-  .m2it-code {
-    @apply break-words rounded-md bg-gray-100 p-[1px_4px_2px_4px]
-    font-mono text-[90%] font-normal before:content-[''] after:content-[''];
-  }
-
-  .m2it-strong {
-    @apply font-medium text-[#111];
-  }
-
-  .m2it-table {
-    @apply my-0;
-  }
-
-  .m2it-prose {
-    @apply prose max-w-none leading-normal;
-    @apply prose-a:m2it-link;
-    @apply prose-headings:m2it-headings;
-    @apply prose-img:m2it-prose-img;
-    @apply prose-blockquote:m2it-blockquote;
-    @apply prose-h1:text-[1.55rem];
-    @apply prose-h2:text-[1.45rem];
-    @apply prose-h3:text-[1.35rem];
-    @apply prose-li:m2it-li;
-    @apply prose-ol:m2it-list;
-    @apply prose-ul:m2it-list;
-    @apply prose-td:m2it-td;
-    @apply prose-hr:my-6;
-    @apply prose-code:m2it-code;
-    @apply prose-figure:my-3;
-    @apply prose-strong:m2it-strong;
-    @apply prose-table:m2it-table;
-  }
-
-  .page-discrete {
-    .block-callout {
-      @apply rounded-lg border shadow-lg;
-    }
-    & > *:first-child {
-      @apply mt-0;
-    }
-    .updated-block {
-      display: none;
-    }
-  }
-
-  .notion-inline-code {
-    @apply border border-gray-200;
-  }
-
-  .m2it-box-shadow {
-    box-shadow: 8px 14px 38px #272c310f, 1px 3px 8px #272c3108;
-  }
-
-  .m2it-scrollbar {
-    &::-webkit-scrollbar {
-      width: 10px;
-      height: 10px;
-    }
-    &::-webkit-scrollbar-thumb {
-      background: #ced4da;
-      border-radius: 10px;
-      &:hover {
-        background: #adb5bd;
-      }
-    }
-    &::-webkit-scrollbar-track {
-      background: transparent;
-    }
-
-    &.m2it-scrollbar-small {
-      &::-webkit-scrollbar {
-        width: 7px;
-        height: 7px;
-      }
-      &::-webkit-scrollbar-thumb {
-        border-radius: 7px;
-      }
-    }
-  }
-
-  // Hide webkit search cancel button
-  .m2it-hide-wscb {
-    &::-webkit-search-cancel-button {
-      -webkit-appearance: none;
-      display: none;
     }
   }
 }
